fix: adjust padding and gap in user profile styles for improved layout

--- a/src/styles/_user-profile.scss
+++ b/src/styles/_user-profile.scss
@@ -113,11 +113,12 @@
   transition: background-color 0.2s ease-in-out;
   background-color: var(--surface);
   border-top: 1px solid var(--secondary-hover);
+  padding: calc(var(--spacing-unit) * 4);
+  gap: calc(var(--spacing-unit) * 4);
 }
 
 .user-profile-content {
   display: flex;
-  padding: calc(var(--spacing-unit) * 2);
   align-items: center;
   gap: calc(var(--spacing-unit) * 3);
   align-self: stretch;
@@ -178,7 +179,6 @@
   justify-content: space-between;
   align-items: center;
   align-self: stretch;
-  padding: calc(var(--spacing-unit) * 2);
 
   &__friends {
     display: flex;
